log
Thu Apr  7 15:55:23 UTC 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|5
total_score: 20/70
8dd9275
Sat Apr  9 19:38:42 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
ec8867c
Sat Apr  9 19:41:10 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:71:3: error: statement with no effect [-Werror=unused-value]
   for(i;i<capacity;i++){
   ^~~
cc1: all warnings being treated as errors
Compilation failed
d56557b
Sat Apr  9 19:41:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
42155dd
Sat Apr  9 19:41:31 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
9032565
Sat Apr  9 19:48:12 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   Mapa->size=NULL;
             ^
hashmap.c:71:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   Mapa->capacity=NULL;
                 ^
hashmap.c:72:3: error: ‘Mapap’ undeclared (first use in this function); did you mean ‘Mapa’?
   Mapap->current=-1;
   ^~~~~
   Mapa
hashmap.c:72:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a8ce932
Sat Apr  9 19:48:30 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   Mapa->size=NULL;
             ^
hashmap.c:71:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   Mapa->capacity=NULL;
                 ^
cc1: all warnings being treated as errors
Compilation failed
0b6dadd
Sat Apr  9 19:49:00 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
14ea3c1
Sat Apr  9 19:50:28 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
f4c8339
